crates/fm-server/tests/api/snapshots/api__morph__can_call_morph.snap
---
source: crates/fm-server/tests/api/morph.rs
expression: data
---
[
  {
    "gf": "dväljas",
    "id": "dväljas..vb.1",
    "is": [],
    "msd": "pres ind s-form",
    "p": "vb_vs_dväljas",
    "pos": "vb"
  },
  {
    "gf": "dväljas",
    "id": "dväljas..vb.1",
    "is": [],
    "msd": "imper",
    "p": "vb_vs_dväljas",
    "pos": "vb"
  }
]
